# MinimumVertexCover

./: CMakeLists.txt  GeneralUtil.cpp  GraphProps.cpp  README.md  Validator.cpp  ece650-a4.cpp  user.yml
analysis data/: correctnessAnalysis.csv  timeAnalysis till 16.csv  timeAnalysis till 50.csv
